infrastructure/openshift/test/api-DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: test
  name: api-test
spec:
  replicas: 1
  selector:
    app: test
    deploymentconfig: api-test
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: test
        deploymentconfig: api-test
    spec:
      containers:
        - env:
            - name: DOMAIN
              value: "http://api.myskills-test.dev.services.jtech.se"
            - name: PORT
              value: "3000"
            - name: REDIS_API_HOST
              value: "redis-test.myskills.svc"
            - name: REDIS_API_PORT
              value: "6379"
            - name: REDIS_API_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: redis-test-password
            - name: MYDATA_OPERATOR
              value: "https://operator-ci.dev.services.jtech.se"
            - name: MYDATA_OPERATOR_PRIVATE_KEY
              valueFrom:
                secretKeyRef:
                  key: private.key
                  name: mydata-operator
            - name: MYDATA_OPERATOR_PUBLIC_KEY
              valueFrom:
                secretKeyRef:
                  key: public.key
                  name: mydata-operator
          image: docker.io/jobtechswe/myskills-api:latest
          imagePullPolicy: Always
          name: api-test
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              memory: 400Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
