infrastructure/openshift/test/api-Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test
  name: api-test
spec:
  host: api.myskills-test.dev.services.jtech.se
  port:
    targetPort: http
  to:
    kind: Service
    name: api-test
    weight: 100
  wildcardPolicy: None
