infrastructure/openshift/test/api-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: api-test
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: test
    deploymentconfig: api-test
  type: ClusterIP
