infrastructure/openshift/test/redis-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: redis-test
  namespace: myskills
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    name: redis-test
  type: ClusterIP
